# rust-todo-cli

./: .env  Cargo.toml  README.md  database.db
migrations/2023-07-30-232055_create_tasks/: up.sql
src/: app.rs  handler.rs  lib.rs  main.rs  models.rs  schema.rs  ui.rs
