[package]
name = "todo_cli"
version = "0.1.0"
authors = ["prezeswastaken <kacper.preyzner@studenci.collegiumwitelona.pl>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.21.0" }
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"

[lib]
doc = false
